--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Environment configuration files
+.env
+.env.*
+
 node_modules
 dist
 dist-ssr
